--- a/java-mybatis/pom.xml
+++ b/java-mybatis/pom.xml
@@ -28,6 +28,12 @@
             <version>5.1.47</version>
         </dependency>
 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
         <!--junit-->
         <dependency>
             <groupId>junit</groupId>
