--- a/java-mybatis/pom.xml
+++ b/java-mybatis/pom.xml
@@ -34,6 +34,12 @@
             <version>1.2.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+        </dependency>
+
         <!--junit-->
         <dependency>
             <groupId>junit</groupId>
