--- a/java-netty/pom.xml
+++ b/java-netty/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>java-netty</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.39.Final</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
