--- a/java-log/pom.xml
+++ b/java-log/pom.xml
@@ -5,11 +5,19 @@
     <parent>
         <artifactId>javaFrameworkTest</artifactId>
         <groupId>com.mo</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>java-log</artifactId>
 
+    <dependencies>
+        <!--junit-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
 
 </project>
