--- a/java-mybatis-plus/pom.xml
+++ b/java-mybatis-plus/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>javaFrameworkTest</artifactId>
-        <groupId>com.sixcapital</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>com.mo</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
