java日志系统-配置文件的设计与读取实现及测试用例

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>java-mybatis-plus</module>
         <module>java-design-pattern</module>
 		<module>java-netty</module>
+		<module>java-log-jdk</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
