--- a/java-log-jdk/src/test/resources/log.properties
+++ b/java-log-jdk/src/test/resources/log.properties
@@ -1,4 +1,4 @@
-CFG_LOG_LEVEL=INFO
+CFG_LOG_LEVEL=0,1,2,3
 CONSOLE_PRINT=true
 CFG_CHARSET_NAME=UTF-8
-CFG_LOG_PATH=./log
+CFG_LOG_PATH=/Users/mo/data/log
