java-日志的发展-Slf4j日志接口和logback日志实现

--- a/java-log-develop/pom.xml
+++ b/java-log-develop/pom.xml
@@ -15,6 +15,7 @@
         <module>log4j</module>
         <module>jul</module>
         <module>jcl</module>
+        <module>logback</module>
     </modules>
 
 
