--- a/java-log-develop/pom.xml
+++ b/java-log-develop/pom.xml
@@ -16,6 +16,7 @@
         <module>jul</module>
         <module>jcl</module>
         <module>logback</module>
+        <module>log4j2</module>
     </modules>
 
 
