java-日志的配置-log4j默认是先找log4j.xml作为配置文件，若没有，就找log4j.properties文件

--- a/java-log-develop/log4j/src/main/resources/log4j.properties
+++ b/java-log-develop/log4j/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=debug,stdout
 #console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern= log4j:[%d{yyyy-MM-dd HH:mm:ss a}]:%p %l%m%n
+log4j.appender.stdout.layout.ConversionPattern= log4j-properties:[%d{yyyy-MM-dd HH:mm:ss a}]:%p %l%m%n
 
 #dailyfile
 log4j.appender.dailyfile=org.apache.log4j.DailyRollingFileAppender
