java-日志的配置-配置log4j的日志输出到文件

--- a/java-log-develop/log4j/src/main/resources/log4j.properties
+++ b/java-log-develop/log4j/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=info,stdout
+log4j.rootLogger=info,stdout,dailyfile
 
 #console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -8,7 +8,7 @@ log4j.appender.stdout.layout.ConversionPattern= log4j-properties:[%d{yyyy-MM-dd 
 #dailyfile
 log4j.appender.dailyfile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dailyfile.DatePattern='_'yyyy-MM-dd'.log'
-log4j.appender.dailyfile.File=./log4j.log
+log4j.appender.dailyfile.File=./java-log-develop/log4j/dailyfile.log
 log4j.appender.dailyfile.Append=true
 log4j.appender.dailyfile.Threshold=INFO
 log4j.appender.dailyfile.layout=org.apache.log4j.PatternLayout
