java-日志的配置-slf4j通过maven配置把日志实现转给其他日志框架

--- a/java-log-develop/pom.xml
+++ b/java-log-develop/pom.xml
@@ -17,6 +17,7 @@
         <module>jcl</module>
         <module>logback</module>
         <module>log4j2</module>
+        <module>slf4j</module>
     </modules>
 
 
