java-日志的配置-slf4j和其他日志框架的转换容易形成日志环

--- a/java-log-develop/pom.xml
+++ b/java-log-develop/pom.xml
@@ -18,6 +18,7 @@
         <module>logback</module>
         <module>log4j2</module>
         <module>slf4j</module>
+        <module>log-round</module>
     </modules>
 
 
