--- a/pom.xml
+++ b/pom.xml
@@ -1,41 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<packaging>pom</packaging>
-	<modules>
-		<module>java-juc-concurrent</module>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <modules>
+        <module>java-juc-concurrent</module>
         <module>java-mybatis</module>
         <module>java-mybatis-plus</module>
         <module>java-design-pattern</module>
-		<module>java-netty</module>
-		<module>java-log-jdk</module>
+        <module>java-netty</module>
+        <module>java-log-jdk</module>
         <module>java-bigData-search</module>
         <module>java-log-develop</module>
-	</modules>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.3.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.mo</groupId>
-	<artifactId>javaFrameworkTest</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<name>javaFrameworkTest</name>
-	<description> project for java Framework Test</description>
+        <module>java-log-platform</module>
+    </modules>
 
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+    <groupId>com.mo</groupId>
+    <artifactId>javaFrameworkTest</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>javaFrameworkTest</name>
+    <description>project for java Framework Test</description>
 
 </project>
