--- a/java-log-platform/user-service/src/main/resources/application.yml
+++ b/java-log-platform/user-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 9980
+  port: 9981
 spring:
   application:
-    name: java-log-platform-web
+    name: java-log-platform-user-service
   cloud:
     nacos: #注册中心地址
       discovery:
