java日志平台-引入common子模块，创建日志记录信息类

--- a/java-log-platform/pom.xml
+++ b/java-log-platform/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>web</module>
         <module>user-service</module>
+        <module>common</module>
     </modules>
 
     <properties>
