java日志平台-重新引入log-common子模块，创建测试接口

--- a/java-log-platform/log-common/pom.xml
+++ b/java-log-platform/log-common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common</artifactId>
+    <artifactId>log-common</artifactId>
 
     <dependencies>
         <dependency>
@@ -30,4 +30,5 @@
             <!--<scope>provided</scope>-->
         </dependency>
     </dependencies>
+
 </project>
