--- a/java-log-platform/pom.xml
+++ b/java-log-platform/pom.xml
@@ -15,7 +15,7 @@
     <modules>
         <module>web</module>
         <module>user-service</module>
-        <module>common</module>
+        <module>log-common</module>
     </modules>
 
     <properties>
