--- a/java-log-platform/log-common/pom.xml
+++ b/java-log-platform/log-common/pom.xml
@@ -29,6 +29,17 @@
             <version>1.18.16</version>
             <!--<scope>provided</scope>-->
         </dependency>
+
+        <dependency>
+            <groupId>com.github.danielwegener</groupId>
+            <artifactId>logback-kafka-appender</artifactId>
+            <version>0.2.0-RC2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.2.2</version>
+        </dependency>
     </dependencies>
 
 </project>
