--- a/java-log-platform/log-common/pom.xml
+++ b/java-log-platform/log-common/pom.xml
@@ -30,10 +30,16 @@
             <!--<scope>provided</scope>-->
         </dependency>
 
+        <!--logback-kafka-appender组件-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.danielwegener</groupId>-->
+<!--            <artifactId>logback-kafka-appender</artifactId>-->
+<!--            <version>0.2.0-RC2</version>-->
+<!--        </dependency>-->
+
         <dependency>
-            <groupId>com.github.danielwegener</groupId>
-            <artifactId>logback-kafka-appender</artifactId>
-            <version>0.2.0-RC2</version>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
