--- a/java-log-platform/order-service/pom.xml
+++ b/java-log-platform/order-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>web</artifactId>
+    <artifactId>order-service</artifactId>
 
     <dependencies>
         <dependency>
@@ -18,6 +18,4 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
-
 </project>
