--- a/java-log-platform/pom.xml
+++ b/java-log-platform/pom.xml
@@ -16,6 +16,7 @@
         <module>web</module>
         <module>user-service</module>
         <module>log-common</module>
+        <module>order-service</module>
     </modules>
 
     <properties>
