java日志平台-引入aop切面和自定义注解，去做日志记录

--- a/java-log-platform/log-common/pom.xml
+++ b/java-log-platform/log-common/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>kafka-clients</artifactId>
             <version>2.2.2</version>
         </dependency>
+
+        <!--aop切面-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
